--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 5px;
+  padding: 10px 30px;
   border-bottom: 1px solid black;
 }
 
@@ -28,4 +28,28 @@ h1 {
 
 nav a {
   color: black;
+}
+
+#content {
+  display: inline-flex;
+}
+
+#content div {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+#largecolumn {
+  flex-direction: column;
+  width: 630px;
+}
+
+#mediumcolumn {
+  flex-direction: column;
+  width: 300px;
+}
+
+#smallcolumn {
+  flex-direction: column;
+  width: 240px;
 }
