--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -100,3 +100,23 @@ html {
 .story {
   width: 300px;
 }
+
+#bites {
+  display: flex;
+  flex-direction: column;
+}
+
+#bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#bites div {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 10px 20px;
+  border-bottom: 1px solid black;
+}
