--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,6 +76,7 @@ html {
 
 .imghead {
   display: flex;
+  align-items: center;
   height: 300px;
 }
 
@@ -83,6 +84,8 @@ html {
   font-weight: bold;
   font-size: 40px;
   color: white;
+  padding: 20px;
+  margin: 0;
 }
 
 .story .imghead p {
@@ -90,6 +93,8 @@ html {
   font-size: 30px;
   color: white;
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 .story p {
@@ -100,7 +105,13 @@ html {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  justify-content: space-around;
   height: 535px;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
 }
 
 .story {
